force-app/main/default/objects/custom_create114__c/custom_create114__c.object-meta.xml
<CustomObject>
    <label>Custom created object114</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects114</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>