force-app/main/default/objects/custom_create114__c/fields/custom_create_114field659__c.field-meta.xml
<CustomField>
    <fullName>custom_create_114field659__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 114field659</label>
    <type>Checkbox</type>
</CustomField>